docs(guide): update MICRO-JAINSLEE-GUIDE + stress + TCK + CMP for S1-S5